@@ -1,1 +1,0 @@
-void f([[nodiscard]] int x);
