@@ -1,0 +1,3 @@
+explain [[reproducible]] int x
+        ^
+9: error: built-in type can not be reproducible
