@@ -1,0 +1,1 @@
+declare f as unsequenced function returning void
