@@ -1,0 +1,3 @@
+explain [[unsequenced]] int x
+        ^
+9: error: built-in type can not be unsequenced
